configmap-1.yml
apiVersion: v1
kind: Pod
metadata:
  name: shell-demo
spec:
  containers:
    - name: nginx
      image: nginx
      volumeMounts:
        - name: car-volume
          mountPath: /etc/car
  volumes:
    - name: car-volume
      configMap:
        name: my-car
