first_pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: first-pod
  labels:
    app: nginx
spec:
  containers:
    - name: nginx
      image: nginx
