gke-pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: nginx
  labels:
    env: dev
spec:
  containers:
    - name: nginx
      image: nginx
      volumeMounts:
        - name: my-vol
          mountPath: /usr/share/ngix/html
      ports:
        - name: http
          containerPort: 80
          protocol: TCP
  volumes:
    - name: my-vol
      gcePersistentDisk:
        pdName: my-data-disk
        fsType: ext4
