nginx-one.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-one
  labels:
    app: nginx
spec:
  replicas: 3
  selector:
     matchLabels:
       app: nginx
  template:
    metadata:
      name: nginx-pod
      labels:
        app: nginx
    spec:
      containers:
        - name: nginx
          image: nginx
          ports:
            - containerPort: 8080
              protocol: TCP
