run-my-nginx.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-nginx
spec:
  replicas: 8
  selector:
    matchLabels:
      run: my-nginx
  template:
    metadata:
      name: my-nginx-pod
      labels:
        run: my-nginx
    spec:
      volumes:
      - name: secret-volume
        secret:
          secretName: nginxsecret
      containers:
        - name: nginx-https
          image: bprashanth/nginxhttps:1.0
          ports:
            - containerPort: 80
            - containerPort: 443
