tolration-demo.yml
apiVersion: v1
kind: Pod
metadat:
  name: bee
spec:
  containers:
    - name: bee
      image: nginx
   tolarations:





               -
