nginx-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: nginx-svc
  labels:
    run: nginx
spec:
  selector:
    run: nginx
  ports:
    - port: 80
      protocol: TCP
