fanout-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: fanout-ingress
spec:
  rules:
  - http:
      paths:
      - path: /
        backend:
            serviceName: nginx
            servicePort: 80
      - path: /echo
        backend:
            serviceName: echoserver
            servicePort: 8080
